--- a/SLIB/SLIB-internet-web/src/main/webapp/plantillas/menu.xhtml
+++ b/SLIB/SLIB-internet-web/src/main/webapp/plantillas/menu.xhtml
@@ -5,13 +5,12 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:p="http://primefaces.org/ui"
-	xmlns:educacion="http://www.educacion.gob.ec/jsf/components/">
+	xmlns:p="http://primefaces.org/ui">
 
 <body>
 	<ui:composition>
 		<h:form name="menu">
-			<educacion:menu value="#{sessionController.menu}"></educacion:menu>
+			
 			<link type="text/css" rel="stylesheet" href="#{request.contextPath}/css/menu.css" />
 			<script type="text/javascript" src="#{request.contextPath}/js/menu.js" />
 		</h:form>
