--- a/SLIB/SLIB-internet-web/src/main/webapp/plantillas/pie.xhtml
+++ b/SLIB/SLIB-internet-web/src/main/webapp/plantillas/pie.xhtml
@@ -10,7 +10,7 @@
     <body>
         <ui:composition>
             <div class="footer">
-            	<h:outputText value="Todos los derechos reservados &copy; Ministerio de Educaci&oacute;n 2016"/>
+            	<h:outputText value="Todos los derechos reservados &copy;"/>
             </div>
         </ui:composition>
     </body>
