--- a/SLIB/SLIB-internet-web/src/main/webapp/plantillas/contenedor.xhtml
+++ b/SLIB/SLIB-internet-web/src/main/webapp/plantillas/contenedor.xhtml
@@ -42,7 +42,7 @@
 		    				<div class="ajax-status">
 		    					<center>
 			            	  	<h:graphicImage value="/img/loader.gif" border="0" width="125px"/><br/>
-			            	  	Espere...
+			            	  	Espere....
 			            	  	</center>
 		              		</div>
 		    			</f:facet>
