prueba de subida

--- a/SLIB/SLIB-internet-web/src/main/webapp/paginas/principal.xhtml
+++ b/SLIB/SLIB-internet-web/src/main/webapp/paginas/principal.xhtml
@@ -3,15 +3,14 @@
     xmlns:f="http://java.sun.com/jsf/core" 
     xmlns:ui="http://java.sun.com/jsf/facelets"
     xmlns:p="http://primefaces.org/ui"
-    template="/plantillas/contenedorExterno.xhtml">
+    template="/plantillas/contenedorSnow.xhtml">
     
     <ui:define name="titulo">
-        Principal luis
+        SLIB | Campeonato On-line
     </ui:define>	
     <ui:define name="contenido">
     	<h:form>
-    		<p:outputLabel value="hola" />
-    		<h:outputLabel value="#{testController.texto}" />
-    	</h:form>
+    		 
+		</h:form>
 	</ui:define>
 </ui:composition>
